nsutils/tests/base/errors/badCmd.trace
1
send 4 5 2 1 0
recv 2 5 0
send 10 5 233 0 1 114 51 41 91 38 82
recv 2 5 7
